other/resources/scdf/scdf-http-proxy.in.yaml
apiVersion: projectcontour.io/v1
kind: HTTPProxy
metadata:
  name: scdf-httpproxy
spec:
  routes:
  - conditions:
    - prefix: /
    services:
    - name: scdf-server
      port: 80
  virtualhost:
    fqdn: scdf.${DATA_E2E_BASE_URL}
