other/resources/scdf/scdf-http-proxy.yaml
apiVersion: projectcontour.io/v1
kind: HTTPProxy
metadata:
  name: scdf-httpproxy
spec:
  routes:
  - conditions:
    - prefix: /
    services:
    - name: scdf-server
      port: 9000
  virtualhost:
    fqdn: scdf-${session_namespace}.mytanzu.ml
