other/resources/scdf/scdf-rabbit-http-proxy.in.yaml
apiVersion: projectcontour.io/v1
kind: HTTPProxy
metadata:
  name: scdf-rabbit-httpproxy
spec:
  routes:
    - conditions:
        - prefix: /
      services:
        - name: scdf-server
          port: 80
  virtualhost:
    fqdn: scdf-rabbit.${DATA_E2E_BASE_URL}
